# rad_boot_hid

./: .gitignore  README.md  README_CN.md
cpurad_boot/: CMakeLists.txt  app.overlay  prj.conf
cpurad_boot/src/: main.c  nrf_cleanup.c
dts_common/: memlayout.dtsi  nrf54h20_cpuapp.dtsi  nrf54h20_cpurad.dtsi
hid_mouse/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  app.overlay  prj.conf  sample.yaml  sysbuild.cmake  sysbuild.conf
hid_mouse/src/: main.c
hid_mouse/sysbuild/empty_app_core/: app.overlay  prj.conf
